--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="list-title">Plans</h1>
       <div class="list-item">
         <input type="text" id="input-field" placeholder="add something...">
-        <button onclick="AddItemToList()" class="button">Add</button>
+        <button onclick="addItemToList()" class="button">Add</button>
       </div>
       <ul id="list-container"></ul>
     </div>
