[#8] Introduce set of todo-lists

--- a/index.html
+++ b/index.html
@@ -9,16 +9,8 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <section class="container">
-    <div class="list-app">
-      <h1 class="list-title">Plans</h1>
-      <div class="list-item">
-        <input type="text" id="input-field" placeholder="add something...">
-        <button onclick="addItemToList()" class="button">Add</button>
-      </div>
-      <ul id="list-container"></ul>
-    </div>
-  </section>
+  <section class="container" id="container"></section>
+  <button class="button button-footer" id="add-lists">Create new list</button>
   <script src="script.js"></script>
 </body>
 </html>
