[#18] inital commit, basic layout structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
   <section class="container" id="container"></section>
-  <button class="button button-footer" id="add-lists">Create new list</button>
+  <button class="button-footer" id="add-lists">
+    <img src="./icons/add-list-button-transparent.svg" alt="Add List Button" class="button-icon">
+    <img src="./icons/add-list-button-hover.svg" alt="Add List Button Active" class="button-icon button-icon-hover">
+  </button>
   <script type="module" src="index.js"></script>
 </body>
 </html>
